Add debug build option support

--- a/lib/android-jsc/build.gradle
+++ b/lib/android-jsc/build.gradle
@@ -15,6 +15,10 @@ android {
             jniLibs.srcDirs = ["${rootDir}/../build/compiled"]
         }
     }
+
+    packagingOptions {
+        doNotStrip "**/libjsc.so"
+    }
 }
 
 dependencies {}
