--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,8 @@ jobs:
           name: install subversion
           command: |
             sudo apt-get update
-            sudo apt-get install coreutils realpath curl git subversion python3-dev ruby gperf -y
+            sudo apt-get install coreutils realpath curl git subversion python3.5 python3.5-dev ruby gperf -y
+            sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1
       - run:
           name: upgrade node
           command: |
