--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install coreutils realpath curl git subversion python3.5 python3.5-dev ruby gperf -y
-            sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1
+            pyenv global system
       - run:
           name: upgrade node
           command: |
