Changed back name to more official JavaScriptCore instead of JSC.

--- a/lib/android-jsc/build.gradle
+++ b/lib/android-jsc/build.gradle
@@ -27,7 +27,7 @@ android {
     }
 
     packagingOptions {
-        doNotStrip "**/libjsc.so"
+        doNotStrip "**/libJavaScriptCore.so"
     }
 }
 
